--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h1>Create a Title Tag</h1>
 
 	<ul>
-		<li>Property Type (Apartment, Townhome, etc.): 
+		<li>Property Type: 
 			<select type="text" id="property-type">
 				<option value="apartments" selected>Apartments</option>
 				<option value="townhomes">Townhomes</option>
@@ -21,6 +21,7 @@
 		<li>City: <input type="text" id="city"></li>
 		<li>State: <input type="text" id="state"></li>
 		<li>Zip Code: <input type="text" id="zip-code"></li>
+		<li>Title Length: <input type="number" id="title-length" min="50" max="75"></li>
 	</ul>
 
 	<button id="tag-button">Generate Title Tag</button>
@@ -31,7 +32,35 @@
 	<span id="gallery-title"></span></p>
 	<p>Amenities: 
 	<span id="amenities-title"></span></p>
-	<script src="scripts.js">
-	</script>
-</body>
-</html>
+	<script>
+
+		let tagButton = document.getElementById('tag-button');
+		let propertyType = document.getElementById('property-type').value;
+
+		if (propertyType === "apartments") {
+
+			const titleEnds = [" Apartments | Apartments for rent in ", " | Apartments for rent in ", " | Apartments in ", " Apartments in ", " Apartments "];
+			let homepageTag = function() {
+				let homepageDiv = document.getElementById('homepage-title');
+				let propertyName = document.getElementById('property-name').value; 
+				let city = document.getElementById('city').value; 
+				let state = document.getElementById('state').value;
+				let zipCode = document.getElementById('zip-code').value;
+				let titleLength = document.getElementById('title-length').value;
+				homepageDiv.innerHTML = propertyName.concat(titleEnds[1],city,', ',state,', ',zipCode);
+			};
+			tagButton.addEventListener('click',homepageTag);
+		}
+
+		else if (propertyType === "townhomes") {
+
+			const titleEnds = [" Townhomes | Townhomes for rent in ", " | Townhomes for rent in ", " | Townhomes in ", " Townhomes in ", " Townhomes "];
+				}	
+
+		else {
+
+		};
+
+		</script>
+	</body>
+	</html>
