--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<ul>
 		<li>Property Type: 
 			<select id="property-type">
+				<option value=""></option>
 				<option value="Apartments">Apartments</option>
 				<option value="Townhomes">Townhomes</option>
 			</select>
@@ -19,7 +20,7 @@
 		<li>City: <input type="text" id="city"></li>
 		<li>State: <input type="text" id="state"></li>
 		<li>Zip Code: <input type="text" id="zip-code"></li>
-		<li>Max Title Length: <input type="number" id="title-length" min="50" max="75"></li>
+		<li>Max Title Length: <input type="number" id="title-length"></li>
 	</ul>
 
 	<button id="tag-button">Generate Title Tag</button>
