--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<p><b>Privacy Policy:</b> 
 	<span id="title-17"></span></p>
 	<p><b>Accessibility Statement:</b> 
-	<span id="title-18"></span></p>
+	<span id="title-18"></span><br /><br />
 	<span id="title-19"></span></p>
 	<p><b>Terms:</b> 
 	<span id="title-20"></span></p>
@@ -81,23 +81,29 @@
 			let propertyType = selectType.value;
 
 		const titleEnds = [` ${propertyType} | ${propertyType} for rent in `, ` | ${propertyType} for rent in `, ` | ${propertyType} in `, ` ${propertyType} in `, ` ${propertyType} `];
-		const pageTypes = ["","Photos","Amenities","Floor Plans","Neighborhood","Contact","Schedule a Tour","Apply Online","Virtual Tours","Pet Friendly","Directions","FAQ","Availability","Reviews","Resident Portal","Reset Password","Find UserID","Privacy Policy","Accessibility Statement","Accessibility","Terms","CA Privacy Notice","Virtual Leasing","COVID-19 FAQ"];
-		for (let k = 0; k <= pageTypes.length; k++) {
+		const pageTypes = ["", "Photos", "Amenities", "Floor Plans", "Neighborhood", "Contact", "Schedule a Tour", "Apply Online", "Virtual Tours", "Pet Friendly", "Directions", "FAQ", "Availability", "Reviews", "Resident Portal", "Reset Password", "Find UserID", "Privacy Policy", "Accessibility Statement", "Accessibility", "Terms", "CA Privacy Notice", "Virtual Leasing", "COVID-19 FAQ"];
+		for (let k = 0; k < pageTypes.length; k++) {
 			let homepageTag = function() {
-				for (let i = 0; i <= titleEnds.length; i++) {
+				for (let i = 0; i < titleEnds.length; i++) {
 					let titleDiv = document.getElementById(`title-${k}`);
 					let propertyName = document.getElementById('property-name').value; 
 					let city = document.getElementById('city').value; 
 					let state = document.getElementById('state').value;
 					let zipCode = document.getElementById('zip-code').value;
 					let titleLength = document.getElementById('title-length').value;
-					let pageTitle = pageTypes[k].concat(' | ',propertyName,titleEnds[i],city,', ',state,', ',zipCode);
+					let bar
+					if (k === 0) {
+						bar = "";
+					} else {
+						bar = " | ";
+					};
+					let pageTitle = pageTypes[k].concat(bar, propertyName, titleEnds[i], city, ', ', state, ', ', zipCode);
 					if (pageTitle.length <= titleLength) { 
 						titleDiv.innerHTML = pageTitle;
 						break;
 					}
 					else {
-						let pageTitle = pageTypes[k].concat(' | ',propertyName,titleEnds[i],city,', ',state);
+						let pageTitle = pageTypes[k].concat(bar, propertyName, titleEnds[i], city, ', ', state);
 						if (pageTitle.length <= titleLength) {
 							titleDiv.innerHTML = pageTitle;
 							break;
