--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<ul>
 		<li>Property Type: 
 			<select id="property-type">
-				<option value=""></option>
 				<option value="Apartments">Apartments</option>
 				<option value="Townhomes">Townhomes</option>
 			</select>
@@ -77,6 +76,7 @@
 
 		let tagButton = document.getElementById('tag-button');
 		let selectType = document.getElementById('property-type');
+		window.addEventListener('load',findPropertyType);
 		selectType.addEventListener('change',findPropertyType);
 		function findPropertyType() {
 			let propertyType = selectType.value;
