Fix variable names, minor fixes

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Create Your Title Tag</title>
+	<title>Create Your Title Tags</title>
 </head>
 <body>
-	<h1>Create a Title Tag</h1>
+	<h1>Create Title Tags</h1>
 
 	<ul>
 		<li>Property Type: 
@@ -76,14 +76,14 @@
 
 		let tagButton = document.getElementById('tag-button');
 		let selectType = document.getElementById('property-type');
-		window.addEventListener('load',findPropertyType);
-		selectType.addEventListener('change',findPropertyType);
-		function findPropertyType() {
+		window.addEventListener('load',generateTag);
+		selectType.addEventListener('change',generateTag);
+		function generateTag() {
 			let propertyType = selectType.value;
 			const titleEnds = [` ${propertyType} | ${propertyType} for rent in `, ` | ${propertyType} for rent in `, ` | ${propertyType} in `, ` ${propertyType} in `, ` ${propertyType} `];
 			const pageTypes = ["", "Photos", "Amenities", "Floor Plans", "Neighborhood", "Contact", "Schedule a Tour", "Apply Online", "Virtual Tours", "Pet Friendly", "Directions", "FAQ", "Availability", "Reviews", "Resident Portal", "Reset Password", "Find UserID", "Privacy Policy", "Accessibility Statement", "Accessibility", "Terms", "CA Privacy Notice", "Virtual Leasing", "COVID-19 FAQ"];
 			for (let k = 0; k < pageTypes.length; k++) {
-				let homepageTag = function() {
+				let createTag = function() {
 					for (let i = 0; i < titleEnds.length; i++) {
 						let titleDiv = document.getElementById(`title-${k}`);
 						let propertyName = document.getElementById('property-name').value; 
@@ -115,7 +115,7 @@
 						};
 					};
 				};
-			tagButton.addEventListener('click',homepageTag);
+			tagButton.addEventListener('click',createTag);
 			};
 		};
 
