Minor fixes and add white space

--- a/index.html
+++ b/index.html
@@ -76,15 +76,27 @@
 
 		let tagButton = document.getElementById('tag-button');
 		let selectType = document.getElementById('property-type');
+
 		window.addEventListener('load',generateTag);
 		selectType.addEventListener('change',generateTag);
+
+
 		function generateTag() {
+
 			let propertyType = selectType.value;
+
+
 			const titleEnds = [` ${propertyType} | ${propertyType} for rent in `, ` | ${propertyType} for rent in `, ` | ${propertyType} in `, ` ${propertyType} in `, ` ${propertyType} `];
+
 			const pageTypes = ["", "Photos", "Amenities", "Floor Plans", "Neighborhood", "Contact", "Schedule a Tour", "Apply Online", "Virtual Tours", "Pet Friendly", "Directions", "FAQ", "Availability", "Reviews", "Resident Portal", "Reset Password", "Find UserID", "Privacy Policy", "Accessibility Statement", "Accessibility", "Terms", "CA Privacy Notice", "Virtual Leasing", "COVID-19 FAQ"];
+
+
 			for (let k = 0; k < pageTypes.length; k++) {
+
 				let createTag = function() {
+
 					for (let i = 0; i < titleEnds.length; i++) {
+
 						let titleDiv = document.getElementById(`title-${k}`);
 						let propertyName = document.getElementById('property-name').value; 
 						let city = document.getElementById('city').value; 
@@ -97,18 +109,20 @@
 						} else {
 							bar = " | ";
 						};
+
 						let pageTitle = pageTypes[k].concat(bar, propertyName, titleEnds[i], city, ', ', state, ', ', zipCode);
+
 						if (pageTitle.length <= titleLength) { 
 							titleDiv.innerHTML = pageTitle;
 							break;
-						}
-						else {
+						} else {
+
 							let pageTitle = pageTypes[k].concat(bar, propertyName, titleEnds[i], city, ', ', state);
+
 							if (pageTitle.length <= titleLength) {
 								titleDiv.innerHTML = pageTitle;
 								break;
-							}
-							else if (i === titleEnds.length) {
+							} else if (i === titleEnds.length - 1) {
 								titleDiv.innerHTML = "ERROR: inputs too long to create title shorter than max title length.";
 								break;
 							};
