--- a/titles.html
+++ b/titles.html
@@ -49,28 +49,30 @@
 	<p><b>FAQ:</b> 
 	<span id="title-11"></span></p>
 	<p><b>Availability:</b> 
-	<span id="title-12"></span></p>
+	<span id="title-12"></span><br /><br />
+	<span id="title-13"></span>
+	</p>
 	<p><b>Reviews:</b> 
-	<span id="title-13"></span></p>
-	<p><b>Resident Portal:</b> 
 	<span id="title-14"></span></p>
-	<p><b>Reset Password:</b> 
+	<p><b>Resident Portal:</b> 
 	<span id="title-15"></span></p>
-	<p><b>Find UserID:</b> 
+	<p><b>Reset Password:</b> 
 	<span id="title-16"></span></p>
-	<p><b>Privacy Policy:</b> 
+	<p><b>Find UserID:</b> 
 	<span id="title-17"></span></p>
+	<p><b>Privacy Policy:</b> 
+	<span id="title-18"></span></p>
 	<p><b>Accessibility Statement:</b> 
-	<span id="title-18"></span><br /><br />
-	<span id="title-19"></span></p>
-	<p><b>Terms:</b> 
+	<span id="title-19"></span><br /><br />
 	<span id="title-20"></span></p>
-	<p><b>CA Privacy Notice:</b> 
+	<p><b>Terms:</b> 
 	<span id="title-21"></span></p>
-	<p><b>Virtual Leasing:</b> 
+	<p><b>CA Privacy Notice:</b> 
 	<span id="title-22"></span></p>
-	<p><b>COVID-19 FAQ:</b> 
+	<p><b>Virtual Leasing:</b> 
 	<span id="title-23"></span></p>
+	<p><b>COVID-19 FAQ:</b> 
+	<span id="title-24"></span></p>
 	<script>
 
 
@@ -86,9 +88,9 @@
 			let propertyType = selectType.value;
 
 
-			const titleEnds = [` ${propertyType} | ${propertyType} for rent in `, ` | ${propertyType} for rent in `, ` | ${propertyType} in `, ` ${propertyType} in `, ` ${propertyType} `];
+			const titleEnds = [` ${propertyType} | ${propertyType} for Rent in `, ` | ${propertyType} for Rent in `, ` | ${propertyType} in `, ` ${propertyType} in `, ` ${propertyType} `];
 
-			const pageTypes = ["", "Photos", "Amenities", "Floor Plans", "Neighborhood", "Contact", "Schedule a Tour", "Apply Online", "Virtual Tours", "Pet Friendly", "Directions", "FAQ", "Availability", "Reviews", "Resident Portal", "Reset Password", "Find UserID", "Privacy Policy", "Accessibility Statement", "Accessibility", "Terms", "CA Privacy Notice", "Virtual Leasing", "COVID-19 FAQ"];
+			const pageTypes = ["", "Photos", "Amenities", "Floor Plans", "Neighborhood", "Contact", "Schedule a Tour", "Apply Online", "Virtual Tours", "Pet Friendly", "Directions", "FAQ", "Apartment Search", "Availability", "Reviews", "Resident Portal", "Reset Password", "Find UserID", "Privacy Policy", "Accessibility Statement", "Accessibility", "Terms", "CA Privacy Notice", "Virtual Leasing", "COVID-19 FAQ"];
 
 
 			for (let k = 0; k < pageTypes.length; k++) {
