--- a/titles.html
+++ b/titles.html
@@ -37,42 +37,47 @@
 	<p><b>Contact:</b>
 	<span id="title-5"></span></p>
 	<p><b>Schedule a Tour:</b>
-	<span id="title-6"></span></p>
-	<p><b>Apply Online:</b>
+	<span id="title-6"></span><br /><br />
 	<span id="title-7"></span></p>
+	<p><b>Apply Online:</b>
+	<span id="title-8"></span><br /><br />
+	<span id="title-9"></span>
+	</p>
 	<p><b>Virtual Tours:</b>
-	<span id="title-8"></span></p>
-	<p><b>Pet Friendly:</b>
-	<span id="title-9"></span></p>
-	<p><b>Directions:</b>
 	<span id="title-10"></span></p>
-	<p><b>FAQ:</b>
+	<p><b>Pet Friendly:</b>
 	<span id="title-11"></span></p>
+	<p><b>Directions:</b>
+	<span id="title-12"></span></p>
+	<p><b>FAQ:</b>
+	<span id="title-13"></span></p>
 	<p><b>Availability:</b>
-	<span id="title-12"></span><br /><br />
-	<span id="title-13"></span>
+	<span id="title-14"></span><br /><br />
+	<span id="title-15"></span>
 	</p>
 	<p><b>Reviews:</b>
-	<span id="title-14"></span></p>
-	<p><b>Resident Portal:</b>
-	<span id="title-15"></span></p>
-	<p><b>Reset Password:</b>
 	<span id="title-16"></span></p>
+	<p><b>Resident Portal:</b>
+	<span id="title-17"></span><br /><br />
+	<span id="title-18"></span>
+	</p>
+	<p><b>Reset Password:</b>
+	<span id="title-19"></span></p>
 	<p><b>Find UserID:</b>
-	<span id="title-17"></span></p>
-	<p><b>Privacy Policy:</b>
-	<span id="title-18"></span></p>
-	<p><b>Accessibility Statement:</b>
-	<span id="title-19"></span><br /><br />
 	<span id="title-20"></span></p>
-	<p><b>Terms:</b>
+	<p><b>Privacy Policy:</b>
 	<span id="title-21"></span></p>
-	<p><b>CA Privacy Notice:</b>
-	<span id="title-22"></span></p>
-	<p><b>Virtual Leasing:</b>
+	<p><b>Accessibility Statement:</b>
+	<span id="title-22"></span><br /><br />
 	<span id="title-23"></span></p>
-	<p><b>COVID-19 FAQ:</b>
+	<p><b>Terms:</b>
 	<span id="title-24"></span></p>
+	<p><b>CA Privacy Notice:</b>
+	<span id="title-25"></span></p>
+	<p><b>Virtual Leasing:</b>
+	<span id="title-26"></span></p>
+	<p><b>COVID-19 FAQ:</b>
+	<span id="title-27"></span></p>
 	<script>
 
 
@@ -88,9 +93,9 @@
 			let propertyType = selectType.value;
 
 
-			const titleEnds = [` ${propertyType} | ${propertyType} for Rent in `, ` | ${propertyType} for Rent in `, ` | ${propertyType} in `, ` ${propertyType} in `, ` ${propertyType} `];
+			const titleEnds = [` ${propertyType} | ${propertyType} for Rent in `, ` | ${propertyType} for Rent in `, ` | ${propertyType} in `, ` | ${propertyType} `];
 
-			const pageTypes = ["", "Photos", "Amenities", "Floor Plans", "Neighborhood", "Contact", "Schedule a Tour", "Apply Online", "Virtual Tours", "Pet Friendly", "Directions", "FAQ", "Apartment Search", "Availability", "Reviews", "Resident Portal", "Reset Password", "Find UserID", "Privacy Policy", "Accessibility Statement", "Accessibility", "Terms", "CA Privacy Notice", "Virtual Leasing", "COVID-19 FAQ"];
+			const pageTypes = ["", "Photos", "Amenities", "Floor Plans", "Neighborhood", "Contact", "Schedule a Tour", "Tours", "Apply Online", "Apply Now", "Virtual Tours", "Pet Friendly", "Directions", "FAQ", "Apartment Search", "Availability", "Reviews", "Resident Portal", "Residents", "Reset Password", "Find UserID", "Privacy Policy", "Accessibility Statement", "Accessibility", "Terms", "CA Privacy Notice", "Virtual Leasing", "COVID-19 FAQ"];
 
 
 			for (let k = 0; k < pageTypes.length; k++) {
