--- a/titles.html
+++ b/titles.html
@@ -24,71 +24,92 @@
 
 	<button id="tag-button">Generate Title Tag</button>
 
-	<p><b>Homepage:</b>
-	<span id="title-0"></span></p>
-	<p><b>Gallery:</b>
-	<span id="title-1"></span></p>
-	<p><b>Amenities:</b>
-	<span id="title-2"></span></p>
-	<p><b>Floor Plans:</b>
-	<span id="title-3"></span></p>
-	<p><b>Neighborhood:</b>
-	<span id="title-4"></span></p>
-	<p><b>Contact:</b>
-	<span id="title-5"></span></p>
-	<p><b>Schedule a Tour:</b>
-	<span id="title-6"></span><br /><br />
-	<span id="title-7"></span></p>
-	<p><b>Apply Online:</b>
-	<span id="title-8"></span><br /><br />
-	<span id="title-9"></span>
-	</p>
-	<p><b>Virtual Tours:</b>
-	<span id="title-10"></span></p>
-	<p><b>Pet Friendly:</b>
-	<span id="title-11"></span></p>
-	<p><b>Directions:</b>
-	<span id="title-12"></span></p>
-	<p><b>FAQ:</b>
-	<span id="title-13"></span></p>
-	<p><b>Availability:</b>
-	<span id="title-14"></span><br /><br />
-	<span id="title-15"></span>
-	</p>
-	<p><b>Reviews:</b>
-	<span id="title-16"></span></p>
-	<p><b>Resident Portal:</b>
-	<span id="title-17"></span><br /><br />
-	<span id="title-18"></span>
-	</p>
-	<p><b>Reset Password:</b>
-	<span id="title-19"></span></p>
-	<p><b>Find UserID:</b>
-	<span id="title-20"></span></p>
-	<p><b>Privacy Policy:</b>
-	<span id="title-21"></span></p>
-	<p><b>Accessibility Statement:</b>
-	<span id="title-22"></span><br /><br />
-	<span id="title-23"></span></p>
-	<p><b>Terms:</b>
-	<span id="title-24"></span></p>
-	<p><b>CA Privacy Notice:</b>
-	<span id="title-25"></span></p>
-	<p><b>Virtual Leasing:</b>
-	<span id="title-26"></span></p>
-	<p><b>COVID-19 FAQ:</b>
-	<span id="title-27"></span></p>
+	<p><b>Homepage:</b><p>
+	<p><span id="title-0"></span></p>
+	<p><span id="description-0"></span></p>
+	<p><b>Gallery:</b></p>
+	<p><span id="title-1"></span></p>
+	<p><span id="description-1"></span></p>
+	<p><b>Amenities:</b></p>
+	<p><span id="title-2"></span></p>
+	<p><span id="description-2"></span></p>
+	<p><b>Floor Plans:</b></p>
+	<p><span id="title-3"></span></p>
+	<p><span id="description-3"></span></p>
+	<p><b>Neighborhood:</b></p>
+	<p><span id="title-4"></span></p>
+	<p><span id="description-4"></span></p>
+	<p><b>Contact:</b></p>
+	<p><span id="title-5"></span></p>
+	<p><span id="description-5"></span></p>
+	<p><b>Schedule a Tour:</b></p>
+	<p><span id="title-6"></span></p>
+	<p><span id="title-7"></span></p>
+	<p><span id="description-6"></span></p>
+	<p><b>Apply Online:</b></p>
+	<p><span id="title-8"></span></p>
+	<p><span id="title-9"></span></p>
+	<p><span id="description-7"></span></p>
+	<p><b>Virtual Tours:</b></p>
+	<p><span id="title-10"></span></p>
+	<p><span id="description-8"></span></p>
+	<p><b>Pet Friendly:</b></p>
+	<p><span id="title-11"></span></p>
+	<p><span id="description-9"></span></p>
+	<p><b>Directions:</b></p>
+	<p><span id="title-12"></span></p>
+	<p><span id="description-10"></span></p>
+	<p><b>FAQ:</b></p>
+	<p><span id="title-13"></span></p>
+	<p><span id="description-11"></span></p>
+	<p><b>Availability:</b></p>
+	<p><span id="title-14"></span></p>
+	<p><span id="title-15"></span></p>
+	<p><span id="description-12"></span></p>
+	<p><b>Reviews:</b></p>
+	<p><span id="title-16"></span></p>
+	<p><span id="description-13"></span></p>
+	<p><b>Resident Portal:</b></p>
+	<p><span id="title-17"></span></p>
+	<p><span id="title-18"></span></p>
+	<p><span id="description-14"></span></p>
+	<p><b>Reset Password:</b></p>
+	<p><span id="title-19"></span></p>
+	<p><span id="description-15"></span></p>
+	<p><b>Find UserID:</b></p>
+	<p><span id="title-20"></span></p>
+	<p><span id="description-16"></span></p>
+	<p><b>Privacy Policy:</b></p>
+	<p><span id="title-21"></span></p>
+	<p><span id="description-17"></span></p>
+	<p><b>Accessibility Statement:</b></p>
+	<p><span id="title-22"></span></p>
+	<p><span id="title-23"></span></p>
+	<p><span id="description-18"></span></p>
+	<p><b>Terms:</b></p>
+	<p><span id="title-24"></span></p>
+	<p><span id="description-19"></span></p>
+	<p><b>CA Privacy Notice:</b></p>
+	<p><span id="title-25"></span></p>
+	<p><span id="description-20"></span></p>
+	<p><b>Virtual Leasing:</b></p>
+	<p><span id="title-26"></span></p>
+	<p><span id="description-21"></span></p>
+	<p><b>COVID-19 FAQ:</b></p>
+	<p><span id="title-27"></span></p>
+	<p><span id="description-22"></span></p>
+
 	<script>
 
 
 		let tagButton = document.getElementById('tag-button');
 		let selectType = document.getElementById('property-type');
 
-		window.addEventListener('load',generateTag);
-		selectType.addEventListener('change',generateTag);
+		window.addEventListener('load',generateContent);
+		selectType.addEventListener('change',generateContent);
 
 
-		function generateTag() {
+		function generateContent() {
 
 			let propertyType = selectType.value;
 
