Add empty descriptions array and empty function for creating descriptions

--- a/titles.html
+++ b/titles.html
@@ -140,6 +140,13 @@
 
 			const pageTypes = ["", "Photos", "Amenities", "Floor Plans", "Neighborhood", "Contact", "Schedule a Tour", "Tours", "Apply Online", "Apply Now", "Virtual Tours", "Pet Friendly", "Directions", "FAQ", "Apartment Search", "Availability", "Reviews", "Resident Portal", "Residents", "Reset Password", "Find UserID", "Privacy Policy", "Accessibility Statement", "Accessibility", "Terms", "CA Privacy Notice", "Virtual Leasing", "COVID-19 FAQ"];
 
+			const descriptions = [];
+
+			for (let j = 0; j < descriptions.length; j++) {
+				let createDescription = function() {
+					let descriptionDiv = document.getElementById(`description-${j}`);
+				};
+			};
 
 			for (let k = 0; k < pageTypes.length; k++) {
 
