--- a/titles.html
+++ b/titles.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Create Your Title Tags</title>
+	<title>Generate Website Content</title>
 </head>
 <body>
-	<h1>Create Title Tags</h1>
+	<h1>Generate Website Content</h1>
 
 	<ul>
 		<li>Property Type: 
@@ -19,7 +19,7 @@
 		<li>City: <input type="text" id="city"></li>
 		<li>State: <input type="text" id="state"></li>
 		<li>Zip Code: <input type="text" id="zip-code"></li>
-		<li>Max Title Length: <input type="number" id="title-length"></li>
+		<li>Max Title Length: <input type="number" id="title-length"></li><br />
 		<li>Custom Title: <input type="text" id="custom-title"></li>
 	</ul>
 
@@ -150,8 +150,11 @@
 				`${propertyName} ${propertyType}s in ${city}, ${state} ${zipCode}. Find your new ${propertyType.toLowerCase()} today! We offer a variety of ${propertyType.toLowerCase()} floor plans. Contact us Today!`,
 				`Take a photo tour through your new ${city} ${propertyType.toLowerCase()}, and then schedule a tour today! See for yourself better living at ${propertyName}.`,
 				`Each of our ${city}, ${state} ${propertyType.toLowerCase()}s are outfitted with useful features. Check out the amenities that will be available to you at ${propertyName}`,
-				`At [property] apartments in [city, state], you can choose from our apartment floorplans that are complete with everything you need.`,
-
+				`At ${propertyName} ${propertyType}s in ${city}, ${state}, you can choose from our ${propertyType.toLowerCase()} floorplans that are complete with everything you need.`,
+				`Experience the best ${city}, ${state} has to offer. Come home to ${propertyName} ${propertyType}s and come home to better living. Contact us today!`,
+				`Interested in learning more about ${propertyName}? Submit the contact form with your questions. Our leasing consultants will contact you soon.`,
+				`Call or email us to schedule a tour of ${propertyName} today. Come see your new ${city} ${propertyType.toLowerCase()} and the community features in person.`,
+				`Apply now to ${propertyName}. Our ${city} ${propertyType.toLowerCase()}s provide you with everything that you need to be successful in your daily routine.`
 			];
 
 			for (let j = 0; j < descriptions.length; j++) {
